--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,17 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2? family= Inter+Tight:wght@400;500 & display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Inter:wght@300;400;500 & display=swap');
+
+/* fonte inter regular
+     cor : #C0D7E9
+        link #F2F7FB
+*/
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter Tight', sans-serif;
+    font-family: 'Inter', sans-serif;
     text-decoration: none;
     list-style: none;
     color: black;
@@ -14,6 +19,7 @@
 
 body{
     height: 100vh;
+    background-image: linear-gradient(to top,#C0D7E9,#F2F7FB);
 
 }
 
@@ -37,9 +43,9 @@ header img{
 }
 
 header p{
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
-    line-height: 20px;
+    line-height: 24px;
     margin-top: 10px;
 }
 
@@ -54,71 +60,54 @@ section{
     
 }
 
-ul{
-    display: flex;
-    padding: 24px 0;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    
-}
-
-ul li{
-    padding: 10px 16px;
-
-    width: 80%;
-
-    border: 1px solid black;
-
-}
-
-ul li img{
-    width: 30px;
-}
-
-.image{
-   display: flex;
-   position: relative;
-}
-
-.image .nome{
-    background-color: aqua;
-    position: absolute;
-
-    left: 50%;
-    top: 50%;
- 
-    transform: translate(-50%, -50%);
-
-}
-
-.avatar img{
-    width: 30px;
-}
 
 section .container{
-    width: 80%;
-    max-width: 500px;
-    height: 40px;
-    border: 1px solid black;
+    width: 90%;
+    max-width: 680px;
+    height: 50px;
+    border: 1px solid  #F2F7FB;
     position: relative;
     display: flex;
     align-items: center;
 
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #F2F7FB;
+
+    margin-bottom: 15px;
+
+    box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.452);
+    
+
+    
 
 }
 
 section a .image img{
-    width: 30px;
+    width: 40px;
     padding-left: 5px;
 
 }
 
 section a .nome{
-    background-color: brown;
+    font-size: 18px;
+    font-weight: 500;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    transition: 0.4s;
+
+
+}
+
+section a .nome:hover{
+    text-decoration: underline;
+   
+    
+}
+
+section a:hover{
+    transform: scale(1.04);
+    
 }
